<resources>
    <string name="app_name">SafeGuard</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="login_username_hint">user name</string>
    <string name="login_password_hint">password</string>
    <string name="login">Login</string>
    <string name="not_have_account">No account?</string>
    <string name="register_rightnow">Register &gt;</string>
    <string name="title_activity_validate">ValidateActivity</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <!-- switch tab-->
    <string name="text_System_btn">Safety System</string>
    <string name="text_alarm_btn">Remote Alarm</string>
    <string name="userNameEmpty">user name can not be empty!</string>
    <string name="loginSuccess">login success!</string>
    <string name="userNamePasswordError">username or password is error!</string>
    <string name="bindEquipment">bind equipment</string>
    <string name="scannerFailed">scanner failed</string>
    <string name="pleaseReview">please check</string>
    <string name="passwordChangeSuccess">password changed success</string>
    <string name="validatedFailed">validated failed</string>
    <string name="phoneError">phone number is error</string>
    <string name="sendSuccess">send success</string>
    <string name="second">second</string>
    <string name="reValidated">to verify again</string>
    <string name="phoneNumberError">phone number is error</string>
    <string name="validation">validation</string>
    <string name="registerSuccess">register success</string>
    <string name="phoneNumberIsRegistered">phone is verified</string>
    <string name="sendAgain">send again</string>
    <string name="validateCodeNull">validation code can not be null</string>
    <string name="validateSuccess">validated success</string>
    <string name="networkError">network is not connected</string>
    <string name="networkErrorSet">network is not available,please set</string>
    <string name="networkSet">network setting</string>
    <string name="skip">skip</string>
    <string name="appInfo">Security Guard V1.7</string>
    <string name="companyInfo">Wuhan Xiaoan technology co., LTD</string>
    <string name="wifi_first">please connect to wifi</string>
    <string name="wifi_name">Wi-Fi name</string>
    <string name="tip_exit">touch twice</string>
    <string name="title_about">about</string>
    <string name="pull_to_refresh">push refresh</string>
    <string name="networkSettings">network settings</string>
    <string name="dialog_sure_to_delete">delete  sure?</string>
    <string name="dialog_sure_to_off">sure to off ?</string>
    <string name="dialog_btn_back">back</string>
    <string name="dialog_btn_logout">logout</string>
    <string name="dialog_btn_delete">delete</string>
    <string name="dialog_btn_cancel">cancel</string>
    <string name="dialog_btn_confirm">ok</string>
    <string name="dialog_logout_msg">sure to logout</string>
    <string name="register_name_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="btn_next">next</string>
    <string name="new_password">new password</string>
    <string name="change_password">change password</string>
    <string name="old_password">old password</string>
    <string name="confirm">ok</string>
    <string name="cancel">cancel</string>
    <string name="password">password</string>
    <string name="device_manage">device manage</string>
    <string name="device_name">device name</string>
    <string name="name">name</string>
    <string name="forget_password">forget password</string>
    <string name="forget_password_hint1">tel/mail</string>
    <string name="forget_password_get_verifycode">get verifycode</string>
    <string name="forget_password_verifycode">verifycode</string>
    <string name="forget_password_get_verifycode_again">reget your verifycode</string>
    <string name="help">help</string>
    <string name="help_for_device">help</string>
    <string name="help_for_app">APP help</string>
    <string name="login_name_hint">tel／mail</string>
    <string name="login_forget_password">forget password?</string>
    <string name="register">register</string>
    <string name="register_email">mail</string>
    <string name="register_use_mobilephone">register by your tel</string>
    <string name="register_use_email">register by your mail</string>
    <string name="register_tips1">please input your real mai.\n if success you will get a letter</string>
    <string name="register_phone_num">tel</string>
    <string name="search_device_already_configure">device that already configure</string>
    <string name="account_manage">account manage</string>
    <string name="about">about</string>
    <string name="user_manage">user manage</string>
    <string name="user_name">user name</string>
    <string name="logout">logout</string>
    <string name="dialog_call_sure_to_logout">sure logout？</string>
    <string name="company_name">武汉小安科技有限公司</string>
    <string name="bindErrorSet">Not binding equipment, whether to binding equipment?</string>
    <string name="bindSet">Binding equipment prompt</string>
    <string name="goBind">GoBind</string>
    <string name="title_activity_add_sos">addSosActivity</string>
    <string name="delete_contact_person">*****删除联系人*****</string>
    <string name="delete_this_person">删除此人</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="input_true_text">请输入合法字符</string>
    <string name="input_yes_phonenumber">请输入正确的手机号码</string>
    <string name="set_success">设置成功！</string>
    <string name="wait_for_i_miss">正在设置，请等待我消失……</string>
    <string name="init_failed">初始化失败，请关闭APP重试。</string>
    <string name="title_activity_bind_list">BindListActivity</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="title_activity_personal_center">PersonalCenterActivity</string>
    <string name="title_activity_equipment">EquipmentActivity</string>

</resources>
